# WikiTruthBot

./: .env  .replit  README.md  bot.py  bot_new.py  config.py  document_generator.py  handlers.py  main.py  pyproject.toml  requirements.txt  telepot_patch.py  wiki_article.py
